--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -1,4 +1,3 @@
-
 body{
 	font-size: 14px;
 	line-height: 1.5em;
@@ -3269,9 +3268,9 @@ display: inline-table;
 }
 
 /* frank补充  搜索框颜色 */
-#js-site-search-input::-webkit-input-placeholder {color: #fff; }
-#js-site-search-input::-moz-placeholder {color:#fff; }
-#js-site-search-input::-ms-input-placeholder {color: #fff ; }
+.maxlatest #js-site-search-input::-webkit-input-placeholder {color: #fff; }
+.maxlatest #js-site-search-input::-moz-placeholder {color:#fff; }
+.maxlatest #js-site-search-input::-ms-input-placeholder {color: #fff ; }
 
 
 /*补充style.css*/
