--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/common/acerchem/images/style.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/common/acerchem/images/style.css
@@ -192,7 +192,7 @@ input:-ms-input-placeholder{
 	background-color: #f5f5f5;
 }
 header{
-	width: 1200px;
+	width: 1280px;
 	height: 60px;
 	margin: 0 auto;
 	background-color: #fff;
@@ -212,6 +212,17 @@ header{
 }
 .logo img{
 	width: 50%;
+}
+.exit{
+	float: left;
+	/*width: 250px;*/
+	height: 40px;
+	margin-top: 10px;
+	text-align:center;
+	border-left: 2px solid #14416e;
+}
+.exit img{
+	padding-left: 50px;
 }
 .head-nav{
 	float: left;
@@ -252,7 +263,7 @@ header{
 }
 
 .index-container{
-	width: 1200px;
+	width: 1280px;
 	margin: 12px auto;
 }
 .index-container .top-select{
