平台底部优惠价格获取错误及右侧所有优惠前价格没有删除线

--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -1904,6 +1904,10 @@ textarea{
 	vertical-align: initial;
 }
 
+.gen-content .gen-right .check-item .spset span.old-price,.prod-cont .product-right .pdlist span.old-price{
+	text-decoration: line-through;
+}
+
 .gen-content .gen-right .check-item .spset span{
 	margin-right: 4px;
 }
