--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-orderCancelledBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-orderCancelledBody.vm
@@ -37,14 +37,34 @@
 								<tr>
 									<td valign="middle">
 										${ctx.cmsSlotContents.SiteLogo}
-										<img src="${ctx.themeResourceUrl}/images/header_01.png" alt="" width="229" height="72" border="0" align="right" title="" />
+										<img src="data:image/jpg;base64,AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAABMLAAATCwAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAACsQhUwrEIV76xCFf+sQhX/rEIVgAAAAAAAAAAArEIVgKxCFf+s
+QhX/rEIV76xCFTAAAAAAAAAAAAAAAAAAAAAArEIVgKxCFf+sQhX/rEIV/6xCFYAAAAAAAAAAAKxC
+FYCsQhX/rEIV/6xCFf+sQhWAAAAAAAAAAAAAAAAAAAAAAKxCFb+sQhX/rEIVvwAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAKxCFb+sQhX/rEIVvwAAAAAAAAAAAAAAAAAAAACsQhX/rEIV/6xCFXAAAAAA
+AAAAAKxCFRCsQhWArEIVgAAAAACsQhVwrEIV/6xCFf8AAAAAAAAAAAAAAACsQhUgrEIV/6xCFf+s
+QhVAAAAAAAAAAACsQhWPrEIV/6xCFZ8AAAAArEIVQKxCFf+sQhX/rEIVIAAAAAAAAAAArEIVQKxC
+Ff+sQhX/rEIVEAAAAACsQhUgrEIV/6xCFf+sQhUgAAAAAKxCFRCsQhX/rEIV/6xCFUAAAAAAAAAA
+AKxCFUCsQhX/rEIV/wAAAAAAAAAArEIVn6xCFf+sQhX/rEIVQAAAAAAAAAAArEIV/6xCFf+sQhVA
+AAAAAAAAAACsQhVArEIV/6xCFf8AAAAArEIVEKxCFe+sQhX/rEIV/6xCFa8AAAAAAAAAAKxCFf+s
+QhX/rEIVQAAAAAAAAAAArEIVQKxCFf+sQhX/rEIVEKxCFVCsQhX/rEIVv6xCFe+sQhX/rEIVIKxC
+FSCsQhX/rEIV/6xCFUAAAAAAAAAAAKxCFSCsQhX/rEIV/6xCFUCsQhWArEIV/6xCFWCsQhWfrEIV
+/6xCFXCsQhVArEIV/6xCFf+sQhUgAAAAAAAAAAAAAAAArEIV/6xCFf+sQhVwAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAArEIVcKxCFf+sQhX/AAAAAAAAAAAAAAAAAAAAAKxCFb+sQhX/rEIVvwAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAKxCFb+sQhX/rEIVvwAAAAAAAAAAAAAAAAAAAACsQhWArEIV/6xC
+Ff+sQhX/rEIVgAAAAAAAAAAArEIVgKxCFf+sQhX/rEIV/6xCFYAAAAAAAAAAAAAAAAAAAAAArEIV
+MKxCFe+sQhX/rEIV/6xCFYAAAAAAAAAAAKxCFYCsQhX/rEIV/6xCFe+sQhUwAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAA//8gIMGDICDBgyAgx+MgIMYjICCGISAghCEgIIwxICCIMSAggAEgIIABICDH4yAgx+MgIMGD
+ICDBgyAg//8gIA==" alt="" width="16" height="16" border="0" align="right" title="" />
 									</td>
 								</tr>
 								<tr>
 									<td height="30" align="right" valign="middle" bgcolor="#000000">
 										#if (! $ctx.isGuest())
-											<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.secureBaseUrl}/my-account"><font color="#FFFFFF">${ctx.messages.myAccount}</font></a> |
-										#end <a href="${ctx.baseUrl}/store-finder"><font color="#FFFFFF">${ctx.messages.storeFinder}</font></a> &nbsp;&nbsp;</font>
+											<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.secureBaseUrl}/my-account/update-profile"><font color="#FFFFFF">${ctx.messages.myAccount}</font></a> |
+										#end <a href="${ctx.secureBaseUrl}/store-finder"><font color="#FFFFFF">${ctx.messages.storeFinder}</font></a> &nbsp;&nbsp;</font>
 									</td>
 								</tr>
 								<tr>
@@ -90,37 +110,37 @@
 																				<a href="${ctx.baseUrl}$entry.product.url"><font color="#666666"><b>$entry.product.name</b></font></a>
 																			</p>
 																			#if (!$entry.product.baseOptions.isEmpty())
-																			#foreach ($option in $entry.product.baseOptions)
-																			#if ($option.selected && ($option.selected.url == $entry.product.url))
-																			<table width="100%" cellpadding="0" cellspacing="0">
-																				#foreach ($selectedOption in $option.selected.variantOptionQualifiers)
-																				<tr>
-																					<td width="30%" valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$selectedOption.name:</font></p></td>
-																					<td width="70%" valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$selectedOption.value</font></p></td>
-																				</tr>
+																				#foreach ($option in $entry.product.baseOptions)
+																					#if ($option.selected && ($option.selected.url == $entry.product.url))
+																					<table width="100%" cellpadding="0" cellspacing="0">
+																						#foreach ($selectedOption in $option.selected.variantOptionQualifiers)
+																						<tr>
+																							<td width="30%" valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$selectedOption.name:</font></p></td>
+																							<td width="70%" valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$selectedOption.value</font></p></td>
+																						</tr>
+																						#end
+																					</table>
+																					#end
 																				#end
-																			</table>
-																			#end
-																			#end
 																			#end
 																			#if (!$ctx.order.appliedProductPromotions.isEmpty())
-																			#foreach( $promotion in $ctx.order.appliedProductPromotions)
-																			#set ($displayed = false)
-																			#foreach ($consumedEntry in $promotion.consumedEntries)
-																			#if (!$displayed && ($consumedEntry.orderEntryNumber == $entry.entryNumber))
-																			#set ($displayed = true)
-																				<p><font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>${promotion.description}</b></font></p>
-																			#end
-																			#end
-																			#end
+																				#foreach( $promotion in $ctx.order.appliedProductPromotions)
+																					#set ($displayed = false)
+																					#foreach ($consumedEntry in $promotion.consumedEntries)
+																						#if (!$displayed && ($consumedEntry.orderEntryNumber == $entry.entryNumber))
+																						#set ($displayed = true)
+																							<p><font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>${promotion.description}</b></font></p>
+																						#end
+																					#end
+																				#end
 																			#end
 																		</td>
 																	</tr>
 																</table>
 															</td>
 															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.quantity</font></p></td>
-															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.basePrice.formattedValue</font></p></td>
-															<td valign="top"><p><font color="#414a4f" size="3" face="Arial, Helvetica, sans-serif"><b>#if($entry.totalPrice.value > 0) $entry.totalPrice.formattedValue #else ${ctx.messages.free} #end</b></font></p></td>
+															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.baseRealPrice.formattedValue</font></p></td>
+															<td valign="top"><p><font color="#414a4f" size="3" face="Arial, Helvetica, sans-serif"><b>#if($entry.totalRealPrice.value > 0) $entry.totalRealPrice.formattedValue #else ${ctx.messages.free} #end</b></font></p></td>
 														</tr>
 														#end
 													</table>
@@ -130,11 +150,12 @@
 										<!--products end-->
 										<br/>
 										#set ($mailToUrl = "mailto:${ctx.messages.contactUsEmailAddress}")
+										
 										#if(${ctx.baseSite.Uid} == "acerchem")
-										#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs_acerchem', "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
+											#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs_acerchem', "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
 										#else
-										#set ($faqPage = "${ctx.baseUrl}/faq")
-										#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs', "#genHtmlLinkStartTag($faqPage)", "#genHtmlLinkEndTag()", "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
+											#set ($faqPage = "${ctx.baseUrl}/faq")
+											#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs', "#genHtmlLinkStartTag($faqPage)", "#genHtmlLinkEndTag()", "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
 										#end
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$paragraphContactUs</font></p>
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.complimentaryClosing}</font></p>
