--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-quoteBuyerSubmissionBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-quoteBuyerSubmissionBody.vm
@@ -32,12 +32,12 @@
     #set ($quoteDetailsUrl = "${ctx.secureBaseUrl}/my-account/my-quotes/${ctx.quote.code}")
     <table width="100%" cellpadding="0" cellspacing="0" border="0" align="center" style="font-size:16px;background:#f4f4f4;">
         <tr>
-            <td>
-                Dear ${ctx.quote.user.name}
+            <td style="background-color: #ffffff;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
+                Dear ${ctx.messages.getMessage('customername', ${ctx.quote.user.name})}
             </td>
         </tr>
         <tr>
-            <td align="center" valign="top" style="background-color: #ffffff;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
+            <td align="left" valign="top" style="background-color: #ffffff;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
                 We are excited to receive your inquiry, hereby please kindly find our best offer as attached quotation sheet.
                 <br/>
                 For any problem, please feel free to contact our customer service staff.
@@ -46,7 +46,7 @@
             </td>
         </tr>
         <tr>
-            <td bgcolor="#F4F4F4" style="padding-top:26px;padding-bottom:50px;padding-right:35px;padding-left:40px;">
+            <td style="background-color: #ffffff;padding-top:20px;padding-bottom:20px;padding-left:20px;padding-right:20px;">
                 Best Regards,
                 <br/>
                 Ingredients4u
