--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -51,7 +51,9 @@
 .maxfactory li img{width: 30%;}
 .maxfactory li p{display:-webkit-box; position: absolute; top:50%; right:20px; width:calc(70% - 20px) ;-webkit-transform:translate(0,-50%); transform:translate(0,-50%); padding-left:20px; line-height: 1em; font-size: 1.4rem; color:#fff; overflow:hidden;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2; }
 
-.category-media li{border: 1px solid #ccc;float: left;display: table-cell;  color: #fff; width:23%; margin-left: 1%; vertical-align: top; margin-bottom: 15px;}
+.category-media li:nth-child(4){margin-right: 0;}
+.category-media li:nth-child(8){margin-right: 0;}
+.category-media li{border: 1px solid #ccc;float: left;display: table-cell;  color: #fff; width:23%; margin-right: 2.6%; vertical-align: top; margin-bottom: 15px;}
 .category-media li img{    width: 300px; height: 200px;}
 .maxmean li{display: table-cell;  color: #fff; width:20%;  font-size: 0; margin-left: 1.5%; vertical-align: top; }
 .maxmean li a{display: block; margin-right:5%; position: relative; line-height: 1em;}
