弹框显示关闭按钮颜色修改

--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -467,7 +467,7 @@ a,button , .maxtop .maxmenu li a{
     float: right;
     margin-left: 3px;
     cursor: pointer; */
-    color:#ec7205
+    /*color:#ec7205*/
 }
 
 .global-alerts .alert-danger , .global-alerts .alert-warning , .global-alerts .alert-info{
