--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-quoteBuyerSubmissionBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-quoteBuyerSubmissionBody.vm
@@ -98,8 +98,8 @@
                     <tr>
                         <td > ${item.product.code} </td>
                         <td > ${item.product.name} </td>
-                        <td > $!{item.unitname} </td>
-                        <td > $!{item.product.totalWeight} </td>
+                        <td > $!{item.product.unitName} </td>
+                        <td > $!{item.totalWeight} </td>
                         <td > ${item.basePrice.value}</td>
                         <td > ${item.quantity} </td>
                         <td > $!{item.product.packageWeight} </td>
